--- a/client/src/assets/less/styles.less
+++ b/client/src/assets/less/styles.less
@@ -39,6 +39,14 @@ app-toast {
     color: #de1515;
 }
 
+.middle {
+    vertical-align: middle;
+}
+
+.hand {
+    cursor: pointer;
+}
+
 .p-grid {
     display: -ms-flexbox;
     display: flex;
