create tierrate UI

--- a/client/src/app/admin/tierrate.component.html
+++ b/client/src/app/admin/tierrate.component.html
@@ -8,11 +8,37 @@
             <div class="breadcrumb">
                 <span *ngFor="let label of [Locales.admin, Locales.tierRates]">{{label}}</span>
             </div>
-            <ft-table filter="billing" [columns]="cols">
-                <ng-template pTemplate="expandFormTemplate">
-                    <p>HELLLO</p>
+            <ft-table sortField="last" filter="tier-table" [columns]="cols" [result]="result" (onNotify)="eventTableHandler($event)">
+                <ng-template pTemplate="firstHeader">
+                    <button pButton icon="pi pi-plus-circle" style="border-radius: 50%; font-size: 1.1rem; min-width: 2rem; width: 2rem; height: 2rem; padding: 0" (click)="onAddRate()"></button>
+                </ng-template>
+                <ng-template pTemplate="firstColumn" let-rowData="$implicit" *ngIf="AppUtils.isEditorAccess()">
+                    <fa-icon [icon]="icons.faPencil" (click)="onEdit(rowData)" style="cursor: pointer"></fa-icon>
                 </ng-template>
             </ft-table>
+            <ft-dialog width="70" height="60">
+                <ng-template pTemplate="{{Locales.user}}" let-user="item">
+                <user-tab [user]="user"></user-tab>
+                </ng-template>
+                <ng-template pTemplate="{{Locales.accounts}}" let-user="item">
+                <account-tab [user]="user"></account-tab>
+                </ng-template>
+                <ng-template pTemplate="{{Locales.contacts}}" let-user="item">
+                <contact-tab [user]="user"></contact-tab>
+                </ng-template>
+                <ng-template pTemplate="{{Locales.certificates}}" let-user="item">
+                <certificate-tab [user]="user"></certificate-tab>
+                </ng-template>
+                <ng-template pTemplate="{{Locales.addresses}}" let-user="item">
+                <address-tab [user]="user"></address-tab>
+                </ng-template>
+                <ng-template pTemplate="Courses/Endorsements" let-user="item">
+                <course-tab [user]="user"></course-tab>
+                </ng-template>
+                <ng-template pTemplate="{{Locales.documents}}" let-user="item">
+                <document-tab [user]="user"></document-tab>
+                </ng-template>
+            </ft-dialog>
         </div>
     </div>
     <app-footer></app-footer>
